# BioAgent

./: .env  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  run.py  tsconfig.json  vite.config.ts
.playwright-mcp/: page-2026-04-21T02-54-22-490Z.yml  page-2026-04-21T02-59-01-594Z.yml  page-2026-04-21T03-03-56-968Z.yml  page-2026-04-21T03-04-56-750Z.yml
backend/: config.py  config.yaml  main.py  mcp_server.py  requirements.txt  rules_config.yaml
core/: alignment.py  evidence.py  llm_client.py
docs/: design.md  usage_guide.md
electron/: agent_harness.mjs  main.js  preload.js
frontend/: app.py
scripts/: calibrate.py
src/: App.css  App.tsx  electron.d.ts  i18n.ts  styles.css
src-python/: bioagent.spec  pyproject.toml  requirements.txt
src-python/bioagent/: __init__.py  agent_chat.py  agent_tools.py  alignment.py  command_intent.py  db.py  db_models.py  evidence.py  lab_suggestions.py  llm_client.py  main.py  mcp_server.py  mcp_tools.py  models.py  mutation_trends.py  parser.py  primer_cli.py  primer_design.py  primer_models.py  primer_skills.py  report.py  rule_eval.py  rules.py  rules_config.yaml  tools_register.py
tests/: conftest.py  test_agent_chat.py  test_agent_harness.mjs  test_agent_tools.py  test_alignment.py  test_alignment_dataset_layout.py  test_alignment_rules.py  test_alignment_stdout_clean.py  test_analysis_layout_contract.py  test_analysis_preferences.py  test_analysis_ui_contract.py  test_calibration_truth_parser.py  test_db.py  (+26 more)
(+210 files in other folders)
